WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27767
Kill the annoying (and misunderstandable) LEAK messages in debug mode
https://bugs.webkit.org/show_bug.cgi?id=27767
Summary
Kill the annoying (and misunderstandable) LEAK messages in debug mode
Zoltan Herczeg
Reported
2009-07-28 06:49:43 PDT
When QtLauncher quits in debug mode, it yields several LEAK messages. This is confusing, since one could think these are real leaks, and QtLauncher has difficulties freeing memory blocks. This patch mimics the mac version.
Attachments
proposed patch
(2.65 KB, patch)
2009-07-28 06:53 PDT
,
Zoltan Herczeg
no flags
Details
Formatted Diff
Diff
propsed patch v2
(2.80 KB, patch)
2009-07-28 23:39 PDT
,
Zoltan Herczeg
no flags
Details
Formatted Diff
Diff
propsed patch v3
(1.79 KB, patch)
2009-07-29 01:30 PDT
,
Zoltan Herczeg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2009-07-28 06:53:11 PDT
Created
attachment 33624
[details]
proposed patch
Kenneth Rohde Christiansen
Comment 2
2009-07-28 09:00:29 PDT
"Kill the LEAK messages in Debug mode" for me sounds like you just removed the messages, but that is not actually what you did. Could you please make the ChangeLog more descriptive?
Zoltan Herczeg
Comment 3
2009-07-28 23:39:51 PDT
Created
attachment 33696
[details]
propsed patch v2
Zoltan Herczeg
Comment 4
2009-07-29 01:30:04 PDT
Created
attachment 33700
[details]
propsed patch v3
Simon Hausmann
Comment 5
2009-07-29 01:34:04 PDT
Comment on
attachment 33700
[details]
propsed patch v3 r=me
Kenneth Rohde Christiansen
Comment 6
2009-07-29 05:34:52 PDT
You forgot to say that you landed this!, please clear the patch review state.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug