2009-07-29  Zoltan Herczeg  <zherczeg@inf.u-szeged.hu>

Reviewed by Simon Hausmann.

        [Qt] In debug mode, this fix frees cached resources
        and other unreferenced objects (by calling the
        garbage collector) to remove the LEAK messages.
        https://bugs.webkit.org/show_bug.cgi?id=27767

        * Api/qwebframe.cpp:
        (qt_drt_cache_clear):
        * QtLauncher/main.cpp:
        (main):

Canonical link: https://commits.webkit.org/38136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46530 268f45cc-cd09-0410-ab3c-d52691b4dbfc