WebKit/qt/QtLauncher/main.cpp
@@ -51,6 +51,10 @@
 #include <QFile>
 #include <cstdio>
 
+#ifndef NDEBUG
+void QWEBKIT_EXPORT qt_drt_garbageCollector_collect();
+#endif
+
 class WebPage : public QWebPage
 {
 public:
@@ -454,6 +458,13 @@ int main(int argc, char **argv)
             window->newWindow(args.at(i));
 
         window->show();
+#ifndef NDEBUG
+        int retVal = app.exec();
+        qt_drt_garbageCollector_collect();
+        QWebSettings::clearMemoryCaches();
+        return retVal;
+#else
         return app.exec();
+#endif
     }
 }
